--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity
             android:name=".GameActivity"
             android:screenOrientation="landscape" />
+        <activity
+            android:name=".ResultActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
